# moon_shadow_log_pics

./: .gitignore  moon_shadow_photo_devlog.md
firmware/: Cargo.toml  espflash.toml  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/bindings/: esp_camera.h
firmware/src/: camera.rs  config.rs  main.rs  types.rs
firmware/tools/: flash.sh  provision.py
logger/: Cargo.toml  config.toml
logger/src/: config.rs  main.rs
