[package]
name = "moon_shadow_photo"
version = "0.1.0"
edition = "2021"

[dependencies]
# ESP-IDF std layer
esp-idf-svc = { version = "0.52", features = ["alloc"] }
esp-idf-hal = { version = "0.46", features = ["rmt-legacy"] }
esp-idf-sys = { version = "0.37", features = ["binstart"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }

# Error handling / logging
anyhow = "1"
log    = "0.4"

[build-dependencies]
embuild = { version = "=0.32.0", features = ["espidf"] }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "^2.0.15" }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
debug = false
