[package]
name = "moon_temp_pic_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc    = "0.24"
tokio      = { version = "1", features = ["full"] }
axum       = "0.7"
chrono     = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
log        = "0.4"
env_logger = "0.11"
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
futures    = "0.3"
